# jaffle-shop

./: .env.example  .gitignore  .pre-commit-config.yaml  .sqlfluff  Makefile  README.md  dagster_cloud.yaml  mkdocs.yml  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml  dagster-cloud.yml  dbt-docs.yml
dag/: __init__.py  definitions.py  loader.py
dag/assets/: ingestion.py
dag/dags/: features.yml  intermediate.yml  raw_ingestion.yml  snapshots.yml
dagster_project/: __init__.py  definitions.py  loader.py
dagster_project/assets/: ingestion.py
dagster_project/dags/: core.yml  staging.yml
dbt/: dbt_project.yml  profiles.yml
dbt/macros/: fk_sk_enrich.sql  scd_sk_map.sql  scd_surrogate_keys.sql  snapshot_incremental_filter.sql
dbt/models/staging/: _schema.yml  _sources.yml  stg_customer_id_mapping.sql  stg_customers.sql  stg_order_items.sql  stg_orders.sql  stg_payments.sql  stg_products.sql
dbt/seeds/: customer_id_mapping.csv
dbt/snapshots/: customers_snapshot.sql  orders_snapshot.sql  products_snapshot.sql
dlt/: pipeline.py
dlt/sources/: jaffle_shop.py
docs/: index.md  robots.txt
docs/blog/: .authors.yml
docs/blog/posts/: backfilling-and-catchup.md  batch-vs-streaming.md  dag-fundamentals.md  data-contracts.md  data-observability.md  data-quality-as-code.md  dimensional-modeling.md  elt-vs-etl.md  fact-table-patterns.md  feature-engineering.md  idempotency.md  incremental-processing.md  ingestion-patterns.md  layered-pipeline-architecture.md  (+12 more)
docs/javascripts/: back-link.js
overrides/: main.html
(+7 files in other folders)
