[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "jaffle-shop"
version = "0.1.0"
description = "Demo data pipeline: dlt + DuckDB + dbt + Dagster"
requires-python = ">=3.11"
dependencies = [
    "dlt[duckdb,motherduck,parquet]>=1.4",
    "dbt-core>=1.8",
    "dbt-duckdb>=1.8",
    "dagster>=1.9",
    "dagster-cloud",
    "dagster-dbt>=0.25",
    "dagster-webserver>=1.9",
    "faker>=24",
    "pyyaml>=6",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "sqlfluff>=3.0",
    "sqlfluff-templater-dbt>=3.0",
    "pre-commit>=3.0",
    "pip-tools>=7.0",
    "mkdocs-material>=9.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["dag*"]
